@@ -4,6 +4,9 @@ zeit.content.cp changes
 0.24 (unreleased)
 -----------------
 
+- Die Metadaten in der Centerpage werden jetzt beim einchecken direkt
+  aktualisiert und nicht mehr asynchron.
+
 - CPE ist i.A. schneller, weil nur noch Teilbereiche der Seite ersetzt werden.
 
 
